--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ torchvision==0.20.1+cu124; sys_platform == "win32"
 torchaudio==2.5.1+cu124; sys_platform == "win32"
 
 pyannote.audio
+pytorch-lightning
+speechbrain
 Pillow
 python-dotenv
 deepl
