--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,6 +114,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -U pyinstaller
+        pip install speechbrain
 
     - name: Set environment variables
       run: echo "API_KEY=${{ secrets.DEEPL_API_KEY }}" > secrets.env
@@ -134,9 +135,7 @@ jobs:
           --workpath windows-distribution/build \
           --collect-submodules=numba \
           --collect-data speechbrain \
-          --collect-submodules speechbrain \
-          --collect-submodules speechbrain.utils \
-          --add-data "$(python -c 'import speechbrain, os; print(os.path.join(os.path.dirname(speechbrain.__file__), "utils"))'):speechbrain/utils" \
+          --collect-all speechbrain
           --collect-data lightning_fabric \
           --name tgt_windows main.py
 
@@ -202,6 +201,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -U pyinstaller
+        pip install speechbrain
 
     - name: Set environment variables
       run: echo "API_KEY=${{ secrets.DEEPL_API_KEY }}" > secrets.env
@@ -220,9 +220,7 @@ jobs:
           --distpath mac-distribution/dist \
           --workpath mac-distribution/build \
           --collect-data speechbrain \
-          --collect-submodules speechbrain \
-          --collect-submodules speechbrain.utils \
-          --add-data "$(python -c 'import speechbrain, os; print(os.path.join(os.path.dirname(speechbrain.__file__), "utils"))'):speechbrain/utils" \
+          --collect-all speechbrain
           --collect-data lightning_fabric \
           --collect-submodules=numba \
           --name tgt_mac main.py
