--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,7 +135,7 @@ jobs:
           --workpath windows-distribution/build \
           --collect-submodules=numba \
           --collect-data speechbrain \
-          --collect-all speechbrain
+          --collect-all speechbrain \
           --collect-data lightning_fabric \
           --name tgt_windows main.py
 
@@ -220,7 +220,7 @@ jobs:
           --distpath mac-distribution/dist \
           --workpath mac-distribution/build \
           --collect-data speechbrain \
-          --collect-all speechbrain
+          --collect-all speechbrain \
           --collect-data lightning_fabric \
           --collect-submodules=numba \
           --name tgt_mac main.py
