--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,6 +136,7 @@ jobs:
           --collect-submodules=numba \
           --collect-data speechbrain \
           --collect-all speechbrain \
+          --collect-all pyannote.audio \
           --collect-data lightning_fabric \
           --name tgt_windows main.py
 
@@ -221,6 +222,7 @@ jobs:
           --workpath mac-distribution/build \
           --collect-data speechbrain \
           --collect-all speechbrain \
+          --collect-all pyannote.audio \
           --collect-data lightning_fabric \
           --collect-submodules=numba \
           --name tgt_mac main.py
