connecting hf to github and tagging version

--- a/.github/workflows/desktop_app_deprecated.yml
+++ b/.github/workflows/desktop_app_deprecated.yml
@@ -1,11 +1,7 @@
 name: Automatic Workflow Distribution
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "source/**/*.py"
+  workflow_dispatch:
 
 jobs:
   cleanup:
