--- a/requirements.txt
+++ b/requirements.txt
@@ -9,42 +9,29 @@ torch==2.5.1+cu124; sys_platform == "win32"
 torchvision==0.20.1+cu124; sys_platform == "win32"
 torchaudio==2.5.1+cu124; sys_platform == "win32"
 
-pyannote.audio
-ctranslate2
-pytorch-lightning
-speechbrain
-Pillow
-python-dotenv
+annotated-types==0.7.0
+anyio==4.9.0
+click==8.2.1
+fastapi==0.115.12
+h11==0.16.0
+idna==3.10
+pydantic==2.11.5
+pydantic_core==2.33.2
+sniffio==1.3.1
+starlette==0.46.2
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uvicorn==0.34.3
 dotenv
-deepl
-deep-translator
-openai_whisper
-faster-whisper
-whisperx
-pandas
-spacy
-tqdm
-transformers
-transliterate
-openpyxl
-sentencepiece
-sacremoses
-msal
+jinja2
 requests
-pykakasi
-fastapi
-uvicorn
-python-multipart
-Flask>=2.0
-psutil
-gunicorn
-uvicorn
-django
-whitenoise
-spacy-curated-transformers
-hf_xet
-gevent
-django-csp
-spacy_stanza
+msal
+pandas
+tqdm
+whisperx
+whisper
+openpyxl
+deepl
+deep_translator
+spacy
 stanza
-numpy
