--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ torchaudio==2.5.1+cu124; sys_platform == "win32"
 
 annotated-types==0.7.0
 anyio==4.9.0
-click==8.2.1
+click
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
