adding improvements to training

--- a/backend/training/glossing/config.cfg
+++ b/backend/training/glossing/config.cfg
@@ -1,7 +1,7 @@
 [paths]
-train = null
-dev = null
-vectors = null
+train = "training/glossing/data/train.spacy"
+dev = "training/glossing/data/train.spacy"
+vectors = "de_core_news_lg"
 init_tok2vec = null
 
 [system]
@@ -9,23 +9,29 @@ gpu_allocator = null
 seed = 0
 
 [nlp]
-lang = "tl"
+lang = "de"
 pipeline = ["tok2vec","morphologizer"]
-tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
+batch_size = 1000
 disabled = []
 before_creation = null
 after_creation = null
 after_pipeline_creation = null
-batch_size = 1000
+tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
+vectors = {"@vectors":"spacy.Vectors.v1"}
 
 [components]
 
 [components.morphologizer]
 factory = "morphologizer"
+extend = false
+label_smoothing = 0.05
+overwrite = true
+scorer = {"@scorers":"spacy.morphologizer_scorer.v1"}
 
 [components.morphologizer.model]
-@architectures = "spacy.Tagger.v1"
+@architectures = "spacy.Tagger.v2"
 nO = null
+normalize = false
 
 [components.morphologizer.model.tok2vec]
 @architectures = "spacy.Tok2VecListener.v1"
@@ -39,16 +45,16 @@ factory = "tok2vec"
 @architectures = "spacy.Tok2Vec.v2"
 
 [components.tok2vec.model.embed]
-@architectures = "spacy.MultiHashEmbed.v1"
+@architectures = "spacy.MultiHashEmbed.v2"
 width = ${components.tok2vec.model.encode.width}
-attrs = ["LOWER","PREFIX","SUFFIX","SHAPE"]
-rows = [5000,2500,2500,2500]
-include_static_vectors = false
+attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
+rows = [5000,1000,2500,2500]
+include_static_vectors = true
 
 [components.tok2vec.model.encode]
 @architectures = "spacy.MaxoutWindowEncoder.v2"
-width = 96
-depth = 4
+width = 256
+depth = 8
 window_size = 1
 maxout_pieces = 3
 
@@ -65,7 +71,7 @@ augmenter = null
 [corpora.train]
 @readers = "spacy.Corpus.v1"
 path = ${paths.train}
-max_length = 2000
+max_length = 0
 gold_preproc = false
 limit = 0
 augmenter = null
@@ -82,7 +88,9 @@ max_epochs = 0
 max_steps = 20000
 eval_frequency = 200
 frozen_components = []
+annotating_components = []
 before_to_disk = null
+before_update = null
 
 [training.batcher]
 @batchers = "spacy.batch_by_words.v1"
@@ -113,16 +121,9 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
+pos_acc = 0.5
+morph_acc = 0.5
 morph_per_feat = null
-dep_las_per_type = null
-sents_p = null
-sents_r = null
-tag_acc = 0.33
-pos_acc = 0.17
-morph_acc = 0.17
-dep_uas = 0.17
-dep_las = 0.17
-sents_f = 0.0
 
 [pretraining]
 
