this is working. complete but model worked for german. Improve catastrophic forgetting

--- a/backend/training/glossing/configs/base_config.cfg
+++ b/backend/training/glossing/configs/base_config.cfg
@@ -62,6 +62,7 @@ max_length = 0
 [training]
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
+average_loss = true
 
 [training.optimizer]
 @optimizers = "Adam.v1"
