--- a/backend/training/glossing/configs/config.cfg
+++ b/backend/training/glossing/configs/config.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\glossing\\data\\de_train.spacy"
-dev = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\glossing\\data\\de_train.spacy"
+train = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\glossing\\data\\de_H_train.spacy"
+dev = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\glossing\\data\\de_H_train.spacy"
 vectors = "de_core_news_lg"
 init_tok2vec = null
 
