changing things to introduce training

--- a/backend/training/glossing/configs/base_config.cfg
+++ b/backend/training/glossing/configs/base_config.cfg
@@ -4,12 +4,12 @@
 [paths]
 train = null
 dev = null
-vectors = "de_core_news_lg"
+vectors = null
 [system]
 gpu_allocator = null
 
 [nlp]
-lang = "de"
+lang = null
 pipeline = ["tok2vec","morphologizer"]
 batch_size = 1000
 
