--- a/backend/training/glossing/configs/config.cfg
+++ b/backend/training/glossing/configs/config.cfg
@@ -1,7 +1,7 @@
 [paths]
-train = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\data\\yo_H_train.spacy"
-dev = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\data\\yo_H_train.spacy"
-vectors = null
+train = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\data\\de_H_train.spacy"
+dev = "C:\\Users\\camelo.cruz\\Documents\\GitHub\\workflow\\backend\\training\\data\\de_H_train.spacy"
+vectors = "de_core_news_lg"
 init_tok2vec = null
 
 [system]
@@ -9,7 +9,7 @@ gpu_allocator = null
 seed = 0
 
 [nlp]
-lang = "yo"
+lang = "de"
 pipeline = ["tok2vec","morphologizer"]
 batch_size = 1000
 disabled = []
