deactivate momentarily action for docker creation

--- a/.github/workflows/web_app.yml
+++ b/.github/workflows/web_app.yml
@@ -1,15 +1,7 @@
 name: "Hugging Face TGT App CI/CD"
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - 'v*'
-
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   sync_to_hub:
