--- a/backend/training/training/spacy_configs/base_config.cfg
+++ b/backend/training/training/spacy_configs/base_config.cfg
@@ -1,42 +1,19 @@
+# This is an auto-generated partial config. To use it with 'spacy train'
+# you can run spacy init fill-config to auto-fill all default settings:
+# python -m spacy init fill-config ./base_config.cfg ./config.cfg
 [paths]
-train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpf25mf3g3/yo_H_train.spacy"
-dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpf25mf3g3/yo_H_train.spacy"
+train = null
+dev = null
 vectors = null
-init_tok2vec = null
-
 [system]
 gpu_allocator = null
-seed = 0
 
 [nlp]
-lang = "yo"
+lang = null
 pipeline = ["tok2vec","morphologizer"]
 batch_size = 1000
-disabled = []
-before_creation = null
-after_creation = null
-after_pipeline_creation = null
-tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
-vectors = {"@vectors":"spacy.Vectors.v1"}
 
 [components]
-
-[components.morphologizer]
-factory = "morphologizer"
-extend = false
-label_smoothing = 0.05
-overwrite = true
-scorer = {"@scorers":"spacy.morphologizer_scorer.v1"}
-
-[components.morphologizer.model]
-@architectures = "spacy.Tagger.v2"
-nO = null
-normalize = false
-
-[components.morphologizer.model.tok2vec]
-@architectures = "spacy.Tok2VecListener.v1"
-width = ${components.tok2vec.model.encode.width}
-upstream = "*"
 
 [components.tok2vec]
 factory = "tok2vec"
@@ -47,8 +24,8 @@ factory = "tok2vec"
 [components.tok2vec.model.embed]
 @architectures = "spacy.MultiHashEmbed.v2"
 width = ${components.tok2vec.model.encode.width}
-attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
-rows = [5000,1000,2500,2500]
+attrs = ["NORM", "PREFIX", "SUFFIX", "SHAPE"]
+rows = [5000, 1000, 2500, 2500]
 include_static_vectors = true
 
 [components.tok2vec.model.encode]
@@ -58,83 +35,47 @@ depth = 8
 window_size = 1
 maxout_pieces = 3
 
-[corpora]
+[components.morphologizer]
+factory = "morphologizer"
+label_smoothing = 0.05
 
-[corpora.dev]
-@readers = "spacy.Corpus.v1"
-path = ${paths.dev}
-max_length = 0
-gold_preproc = false
-limit = 0
-augmenter = null
+[components.morphologizer.model]
+@architectures = "spacy.Tagger.v2"
+nO = null
+
+[components.morphologizer.model.tok2vec]
+@architectures = "spacy.Tok2VecListener.v1"
+width = ${components.tok2vec.model.encode.width}
+
+[corpora]
 
 [corpora.train]
 @readers = "spacy.Corpus.v1"
 path = ${paths.train}
 max_length = 0
-gold_preproc = false
-limit = 0
-augmenter = null
+
+[corpora.dev]
+@readers = "spacy.Corpus.v1"
+path = ${paths.dev}
+max_length = 0
 
 [training]
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
-seed = ${system.seed}
-gpu_allocator = ${system.gpu_allocator}
-dropout = 0.1
-accumulate_gradient = 1
-patience = 1600
-max_epochs = 0
-max_steps = 20000
-eval_frequency = 200
-frozen_components = []
-annotating_components = []
-before_to_disk = null
-before_update = null
+
+[training.optimizer]
+@optimizers = "Adam.v1"
 
 [training.batcher]
 @batchers = "spacy.batch_by_words.v1"
 discard_oversize = false
 tolerance = 0.2
-get_length = null
 
 [training.batcher.size]
 @schedules = "compounding.v1"
 start = 100
 stop = 1000
 compound = 1.001
-t = 0.0
-
-[training.logger]
-@loggers = "spacy.ConsoleLogger.v1"
-progress_bar = false
-
-[training.optimizer]
-@optimizers = "Adam.v1"
-beta1 = 0.9
-beta2 = 0.999
-L2_is_weight_decay = true
-L2 = 0.01
-grad_clip = 1.0
-use_averages = false
-eps = 0.00000001
-learn_rate = 0.001
-
-[training.score_weights]
-pos_acc = 0.5
-morph_acc = 0.5
-morph_per_feat = null
-
-[pretraining]
 
 [initialize]
 vectors = ${paths.vectors}
-init_tok2vec = ${paths.init_tok2vec}
-vocab_data = null
-lookups = null
-before_init = null
-after_init = null
-
-[initialize.components]
-
-[initialize.tokenizer]
