fixing glossing mechanism and configs. Things working

--- a/backend/training/training/spacy_configs/base_config.cfg
+++ b/backend/training/training/spacy_configs/base_config.cfg
@@ -38,6 +38,8 @@ maxout_pieces = 3
 [components.morphologizer]
 factory = "morphologizer"
 label_smoothing = 0.05
+overwrite = true
+extend = true # I changed this to true to allow extending the morphologizer. Avoid forgetting 
 
 [components.morphologizer.model]
 @architectures = "spacy.Tagger.v2"
@@ -65,6 +67,11 @@ train_corpus = "corpora.train"
 
 [training.optimizer]
 @optimizers = "Adam.v1"
+
+[training.score_weights] # I added this section to define score weights
+pos_acc = 0.0
+morph_acc = 1.0
+morph_per_feat = null
 
 [training.batcher]
 @batchers = "spacy.batch_by_words.v1"
