glossing training improved

--- a/backend/training/training/spacy_configs/base_config.cfg
+++ b/backend/training/training/spacy_configs/base_config.cfg
@@ -39,7 +39,7 @@ maxout_pieces = 3
 factory = "morphologizer"
 label_smoothing = 0.05
 overwrite = true
-extend = true # I changed this to true to allow extending the morphologizer. Avoid forgetting 
+extend = true
 
 [components.morphologizer.model]
 @architectures = "spacy.Tagger.v2"
