--- a/backend/training/training/spacy_configs/yo_H_config.cfg
+++ b/backend/training/training/spacy_configs/yo_H_config.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp4dd3c3pa/yo_H_train.spacy"
-dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp4dd3c3pa/yo_H_train.spacy"
+train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpcyabjepr/yo_H_train.spacy"
+dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpcyabjepr/yo_H_train.spacy"
 vectors = null
 init_tok2vec = null
 
@@ -23,7 +23,7 @@ vectors = {"@vectors":"spacy.Vectors.v1"}
 
 [components.morphologizer]
 factory = "morphologizer"
-extend = false
+extend = true
 label_smoothing = 0.05
 overwrite = true
 scorer = {"@scorers":"spacy.morphologizer_scorer.v1"}
@@ -121,8 +121,8 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
-pos_acc = 0.5
-morph_acc = 0.5
+pos_acc = 0.0
+morph_acc = 1.0
 morph_per_feat = null
 
 [pretraining]
