things working in bangla

--- a/environment.yml
+++ b/environment.yml
@@ -8,64 +8,48 @@ dependencies:
   - python=3.11
   - pip
   - pip:
-      # MacOS dependencies
+      # MacOS-specific dependencies
       - torch==2.6.0; sys_platform == "darwin"
       - torchvision==0.21.0; sys_platform == "darwin"
       - torchaudio==2.6.0; sys_platform == "darwin"
 
-      # Windows dependencies
+      # Windows-specific dependencies
       - --extra-index-url https://download.pytorch.org/whl/cu124
       - torch==2.6.0+cu124; sys_platform == "win32"
       - torchvision==0.21.0+cu124; sys_platform == "win32"
       - torchaudio==2.6.0+cu124; sys_platform == "win32"
+      - cupy-cuda12x; sys_platform == "win32"
 
-      # General dependencies
+      # General pip packages
       - annotated-types
       - anyio
       - click
+      - deepl
+      - dotenv
       - fastapi
       - h11
       - idna
+      - jinja2
+      - msal
+      - openai-whisper
+      - openpyxl
+      - pandas
       - pydantic
       - pydantic_core
+      - pykakasi
+      - pypinyin
+      - python-multipart
+      - requests
+      - sacremoses
       - sniffio
+      - spacy
+      - spacy_stanza
+      - sse_starlette
+      - stanza
       - starlette
+      - tqdm
       - typing-inspection
       - typing_extensions
       - uvicorn
-      - dotenv
-      - jinja2
-      - requests
-      - msal
-      - pandas
-      - tqdm
-      - whisperx
-      - openai-whisper
-      - openpyxl
-      - deepl
-      - deep_translator
-      - spacy
-      - spacy_stanza
-      - stanza
-      - python-multipart
-      - sacremoses
-      - pypinyin
-      - pykakasi
-      - cupy-cuda12x; sys_platform == "win32"
       - wandb
-      - sse_starlette
-      - jax==0.4.13
-      - jaxlib==0.4.13
-      - git+https://github.com/sanchit-gandhi/whisper-jax.git
-      - numpy<2.0
-      - huggingface_hub<0.18
-      - git+https://github.com/NVIDIA/NeMo.git@$BRANCH#egg=nemo_toolkit[asr]
-      - hydra-core
-      - librosa
-      - inflect
-      - webdataset
-      - Cython
-      - youtokentome
-      - editdistance
-      - jiwer
-      - ipython
+      - whisperx
