--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,8 +1,12 @@
-name: Build & Push Docker Image
+name: Build & Push Docker Image (GHCR)
 
 on:
   push:
     branches: [ main ]
+
+env:
+  IMAGE_NAME: tgt
+  GHCR_USER: ${{ github.repository_owner }}
 
 jobs:
   build-and-push:
@@ -19,10 +23,13 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push image
+      - name: Build & Push Image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/tgt:latest
+          tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+
+      - name: Show pull command
+        run: echo "Pull with: docker pull ghcr.io/${GHCR_USER}/${IMAGE_NAME}:latest"
