--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,7 @@ version: "3.8"
 
 services:
   tgt:
-    image: ghcr.io/${GHCR_USER}/tgt:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/camelo-cruz/tgt:latest
     ports:
       - "8000:8000"
     env_file:
