--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -35,7 +35,7 @@ jobs:
         run: conda run -n ci_env pytest --cov=.
 
   build-and-push:
-    needs: test
+    #needs: test
     runs-on: ubuntu-latest
 
     steps:
