improved bat for server now with utf8 to avoid character problems

--- a/backend/training/training/spacy_configs/train_config.cfg
+++ b/backend/training/training/spacy_configs/train_config.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpj6jhcsdb/yo_H06_train.spacy"
-dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpj6jhcsdb/yo_H06_train.spacy"
+train = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmprrd_vg9h\\yo_H06_train.spacy"
+dev = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmprrd_vg9h\\yo_H06_train.spacy"
 vectors = null
 init_tok2vec = null
 
