CHANGES to frontend working in server

--- a/backend/training/training/spacy_configs/train_config.cfg
+++ b/backend/training/training/spacy_configs/train_config.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmprrd_vg9h\\yo_H06_train.spacy"
-dev = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmprrd_vg9h\\yo_H06_train.spacy"
+train = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmpgo27pc2f\\yo_H06_train.spacy"
+dev = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmpgo27pc2f\\yo_H06_train.spacy"
 vectors = null
 init_tok2vec = null
 
