--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -55,7 +55,10 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+          tags: ghcr.io/${{ github.repository_owner }}/tgt:latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/tgt:buildcache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/tgt:buildcache,mode=max
+
 
       - name: Show pull command
         run: |
