--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -34,13 +34,18 @@ jobs:
       - name: Run tests with coverage
         run: conda run -n ci_env pytest --cov=.
 
+  jobs:
   build-and-push:
-    #needs: test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - name: Set up Buildx (docker-container driver)
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+          driver: docker-container
+          buildkitd-flags: --debug
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -49,7 +54,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push Image
+      - name: Build & Push (with registry cache)
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -58,8 +63,3 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/tgt:latest
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/tgt:buildcache
           cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/tgt:buildcache,mode=max
-
-
-      - name: Show pull command
-        run: |
-          echo "Pull with: docker pull ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest"
