Testing german training configuration

--- a/backend/training/training/spacy_configs/train_config.cfg
+++ b/backend/training/training/spacy_configs/train_config.cfg
@@ -1,7 +1,7 @@
 [paths]
-train = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmpgo27pc2f\\yo_H06_train.spacy"
-dev = "C:\\Users\\CAMELO~1.CRU\\AppData\\Local\\Temp\\tmpgo27pc2f\\yo_H06_train.spacy"
-vectors = null
+train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpywfbnnmd/de_H10a_train.spacy"
+dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpywfbnnmd/de_H10a_train.spacy"
+vectors = "de_core_news_lg"
 init_tok2vec = null
 
 [system]
@@ -9,7 +9,7 @@ gpu_allocator = null
 seed = 0
 
 [nlp]
-lang = "yo"
+lang = "de"
 pipeline = ["tok2vec","morphologizer"]
 batch_size = 1000
 disabled = []
