--- a/backend/training/training/spacy_configs/train_config.cfg
+++ b/backend/training/training/spacy_configs/train_config.cfg
@@ -1,7 +1,7 @@
 [paths]
-train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpt2quvj_3/de_H10a_train.spacy"
-dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpt2quvj_3/de_H10a_train.spacy"
-vectors = "de_core_news_lg"
+train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp6xdk4lwe/de_H10a_train.spacy"
+dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp6xdk4lwe/de_H10a_train.spacy"
+vectors = null
 init_tok2vec = null
 
 [system]
