--- a/backend/training/training/spacy_configs/train_config.cfg
+++ b/backend/training/training/spacy_configs/train_config.cfg
@@ -1,7 +1,7 @@
 [paths]
-train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpx01i8ku0/de_H10a_train.spacy"
-dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpx01i8ku0/de_H10a_train.spacy"
-vectors = null
+train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpaijmus9r/de_H10a_train.spacy"
+dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpaijmus9r/de_H10a_train.spacy"
+vectors = "de_core_news_lg"
 init_tok2vec = null
 
 [system]
