--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ uvicorn-log.txt
 cache/
 /frontend/dist
 /backend/models/glossing/de_H10a_custom_glossing
+/backend/models/glossing/yo_H06a_custom_glossing
