Last training configuration I need to train models to get german results

--- a/backend/training/training/spacy_configs/train_config.cfg
+++ b/backend/training/training/spacy_configs/train_config.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp_g17liqc/yo_H06a_train.spacy"
-dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp_g17liqc/yo_H06a_train.spacy"
+train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp4ib2joq1/de_H10a_without_vectors_train.spacy"
+dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmp4ib2joq1/de_H10a_without_vectors_train.spacy"
 vectors = null
 init_tok2vec = null
 
@@ -9,7 +9,7 @@ gpu_allocator = null
 seed = 0
 
 [nlp]
-lang = "yo"
+lang = "de"
 pipeline = ["tok2vec","morphologizer"]
 batch_size = 1000
 disabled = []
