IMPROVING CODE QUALITY

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ cache/
 /frontend/dist
 /backend/models/glossing/de_H10a_custom_glossing
 /backend/models/glossing/yo_H06a_custom_glossing
+/backend/models/glossing/de_H10_with_vectors_custom_glossing
