--- a/backend/training/training/spacy_configs/train_config.cfg
+++ b/backend/training/training/spacy_configs/train_config.cfg
@@ -1,7 +1,7 @@
 [paths]
-train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpde_brif5/de_H10a_train.spacy"
-dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmpde_brif5/de_H10a_train.spacy"
-vectors = "de_core_news_lg"
+train = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmphkork4hw/yo_H06a_train.spacy"
+dev = "/var/folders/64/wybzfx8526v8jy1g_088ys0r0000gp/T/tmphkork4hw/yo_H06a_train.spacy"
+vectors = null
 init_tok2vec = null
 
 [system]
@@ -9,7 +9,7 @@ gpu_allocator = null
 seed = 0
 
 [nlp]
-lang = "de"
+lang = "yo"
 pipeline = ["tok2vec","morphologizer"]
 batch_size = 1000
 disabled = []
